<resources>
    <string name="app_name">Is it Vegan?</string>
    <string name="search_view_hint">Search ingredients</string>
    <string name="key_ingredient" translatable="false">INGREDIENT_KEY</string>
    <string name="ingredient_name_placeholder">Ingredient name</string>
    <string name="ingredient_e_number_placeholder" translatable="false">E123</string>
    <string name="ingredient_information_placeholder">Information</string>
    <string name="ingredient_information_empty">No information</string>
    <string name="action_camera">Scan product</string>
    <string name="action_settings">Settings</string>
    <string name="setting_theme">Theme</string>
    <string name="setting_language_app">App</string>
    <string name="theme_entries_system">System theme</string>
    <string name="theme_entries_light">Light</string>
    <string name="theme_entries_dark">Dark</string>
    <string name="preference_category_language">Language</string>
    <string name="preference_category_ui">Display</string>
    <string name="preference_category_info">Information</string>
    <string name="preference_category_other">Other</string>
    <string name="setting_language_ingredients">Ingredient names</string>
    <string name="setting_share_app">Share this app</string>
    <string name="setting_open_introduction">Open introduction</string>
    <string name="setting_build_version" translatable="false">v1.0</string>
    <string name="language_app_entries_system">System language</string>
    <string name="language_ingredients_entries_app">Use app language</string>
    <string name="title_scan">Scan product</string>
    <string name="scan_hint">Point your device at the product\'s barcode or ingredient list</string>
    <string name="error_opening_browser">Error opening browser</string>
    <string name="title_search_online">Search online</string>
    <string name="share_message">Let me recommend you this application! 🌱</string>
    <string name="button_clear">Clear list</string>
    <string name="error_no_camera_permission_granted">Feature requires camera permission</string>
    <string name="title_toggle_torch">Torch</string>
    <string name="error_no_flash_on_device">Flash is not available</string>
    <string name="message_scan_barcode_success">Fetched ingredients for</string>
    <string name="message_scan_barcode_success_no_ingredients">Cannot find ingredients for</string>
    <string name="message_scan_barcode_no_info">No online info for</string>
    <string name="message_scan_barcode_error">Error fetching ingredients for</string>
    <string name="message_debug_enabled">Debugging enabled</string>
    <string name="message_debug_disabled">Debugging disabled</string>
    <string name="snackbar_action_dismiss">Dismiss</string>
    <string name="message_scan_barcode_already_scanned">has already been scanned</string>
    <string name="title_about">About</string>
    <string name="about_text_app">Hi! My name is Jeroen and I developed this app during the first months after I decided that I wanted to adapt a vegan lifestyle. I found it annoying to browse websites in the store to find out whether products were vegan or not. With this app, I hope to support others in their quest for an animal-friendly lifestyle.</string>
    <string name="about_title_ingredients">Ingredient information</string>
    <string name="about_text_ingredients">All ingredient information has been manually constructed by searching the internet. A list like this will never be finished nor flawless. If you miss information or find an error, please let me know by sending an email to contactisitvegan@gmail.com.</string>
    <string name="about_title_barcode">Barcodes</string>
    <string name="about_text_barcode">When scanning barcodes, the online database of Open Food Facts is queried for the product\'s ingredient list. Open Food Facts is a food products database made by everyone, for everyone. Be aware that data might be incomplete or incorrect. For more information, visit <a href="https://world.openfoodfacts.org">openfoodfacts.org</a>.</string>
    <string name="introduction_next">Next</string>
    <string name="introduction_get_started">Get started</string>
    <string name="introduction_title_search">Welcome!</string>
    <string name="introduction_title_scan">Scan</string>
    <string name="introduction_title_view">Discover</string>
    <string name="introduction_title_share">Share</string>
    <string name="introduction_text_search">Find out which ingredients are vegan</string>
    <string name="introduction_text_scan">Scan products to find out what ingredients they contain</string>
    <string name="introduction_text_view">View detailed information regarding specific ingredients such as their origin and usages</string>
    <string name="introduction_text_share">Share the app with your friends so they know what to buy for you</string>
    <string name="ingredient_potassium_inosinate">Potassium inosinate</string>
    <string name="ingredient_disodium_5_ribonucleotides">Disodium 5\'-ribonucleotides</string>
    <string name="ingredient_disodium_inosinate">Disodium inosinate</string>
    <string name="ingredient_agar">Agar, agar-agar</string>
    <string name="ingredient_angora_wool">Angora wool</string>
    <string name="ingredient_gum_arabic">Gum arabic</string>
    <string name="ingredient_ascorbate">Ascorbate</string>
    <string name="ingredient_ascorbic_acid">Ascorbic acid, vitamin C</string>
    <string name="ingredient_ascorbyl_palmitate">Ascorbyl palmitate</string>
    <string name="ingredient_astaxanthin">Astaxanthin</string>
    <string name="ingredient_eggplant">Eggplant</string>
    <string name="ingredient_bone_char">Bone char</string>
    <string name="ingredient_beeswax">Beeswax</string>
    <string name="ingredient_butter_fat">Butter fat</string>
    <string name="ingredient_cocoa_butter">Cocoa butter, cacao butter</string>
    <string name="ingredient_cocoa_mass">Cocoa mass</string>
    <string name="ingredient_calcium_5_ribonucleotides">Calcium 5\'-ribonucleotides</string>
    <string name="ingredient_calcium_ascorbate">Calcium ascorbate</string>
    <string name="ingredient_calcium_formate">Calcium formate</string>
    <string name="ingredient_calcium_guanylate">Calcium guanylate</string>
    <string name="ingredient_calcium_inosinate">Calcium inosinate</string>
    <string name="ingredient_calcium_lactate">Calcium lactate</string>
    <string name="ingredient_casein">Casein, caseinate</string>
    <string name="ingredient_castoreum">Castoreum</string>
    <string name="ingredient_cera_alba">Cera alba</string>
    <string name="ingredient_cera_flava">Cera flava</string>
    <string name="ingredient_cholic_acid">Cholic acid</string>
    <string name="ingredient_citranaxanthin">Citranaxanthin</string>
    <string name="ingredient_collagen">Collagen</string>
    <string name="ingredient_egg">Egg</string>
    <string name="ingredient_egg_yolk">Egg yolk</string>
    <string name="ingredient_gelatin">Gelatin</string>
    <string name="ingredient_glycerol">Glycerol, glycerine</string>
    <string name="ingredient_guanosine_monophosphate">Guanosine monophosphate, GMP</string>
    <string name="ingredient_guanylic_acid">Guanylic acid</string>
    <string name="ingredient_hemp">Hemp</string>
    <string name="ingredient_honey">Honey</string>
    <string name="ingredient_inosine_monophosphate">Inosine monophosphate, IMP</string>
    <string name="ingredient_inosinic_acid">Inosinic acid</string>
    <string name="ingredient_potassium_ascorbate">Potassium ascorbate</string>
    <string name="ingredient_potassium_guanylate">Potassium guanylate</string>
    <string name="ingredient_potassium_lactate">Potassium lactate</string>
    <string name="ingredient_potassium_nitrate">Potassium nitrate, saltpetre</string>
    <string name="ingredient_carmine">Carmine, cochineal</string>
    <string name="ingredient_buttermilk">Buttermilk</string>
    <string name="ingredient_cashmere">Cashmere</string>
    <string name="ingredient_cotton">Cotton</string>
    <string name="ingredient_keratin">Keratin</string>
    <string name="ingredient_coconut_fiber">Coconut fiber</string>
    <string name="ingredient_l_cysteine">L-Cysteine</string>
    <string name="ingredient_l_cystine">L-Cystine</string>
    <string name="ingredient_lactitol">Lactitol</string>
    <string name="ingredient_lactobacillus">Lactobacillus</string>
    <string name="ingredient_lactose">Lactose</string>
    <string name="ingredient_latex">Latex</string>
    <string name="ingredient_lecithin">Lecithin, lecithins</string>
    <string name="ingredient_linen">Linen</string>
    <string name="ingredient_lyocell">Lyocell</string>
    <string name="ingredient_lysozyme">Lysozyme, muramidase</string>
    <string name="ingredient_milk">Milk</string>
    <string name="ingredient_powdered_milk">Powdered milk, dried milk</string>
    <string name="ingredient_lactic_acid">Lactic acid</string>
    <string name="ingredient_formic_acid">Formic acid, methanoic acid</string>
    <string name="ingredient_modal">Modal</string>
    <string name="ingredient_mono__and_diglycerides_of_fatty_acids">Mono- and diglycerides of fatty acids</string>
    <string name="ingredient_musk">Musk</string>
    <string name="ingredient_sodium_ascorbate">Sodium ascorbate</string>
    <string name="ingredient_sodium_formate">Sodium formate</string>
    <string name="ingredient_disodium_guanylate">Disodium guanylate</string>
    <string name="ingredient_sodium_lactate">Sodium lactate</string>
    <string name="ingredient_sodium_nitrite">Sodium nitrite</string>
    <string name="ingredient_nisin">Nisin</string>
    <string name="ingredient_pearls">Pearls</string>
    <string name="ingredient_lard">Lard</string>
    <string name="ingredient_schellac">Schellac</string>
    <string name="ingredient_skatole">Skatole</string>
    <string name="ingredient_soybeans">Soybeans</string>
    <string name="ingredient_soy_lecithin">Soy lecithin</string>
    <string name="ingredient_tallow">Tallow</string>
    <string name="ingredient_vanilla">Vanilla</string>
    <string name="ingredient_violoxanthin">Violoxanthin</string>
    <string name="ingredient_vitamin_b12">Vitamin B12, cobalamin</string>
    <string name="ingredient_vitamin_d2">Vitamin D2, ergocalciferol</string>
    <string name="ingredient_vitamin_d3">Vitamin D3, cholecalciferol</string>
    <string name="ingredient_whey_protein">Whey protein</string>
    <string name="ingredient_whey">Whey</string>
    <string name="ingredient_whey_powder">Whey powder</string>
    <string name="ingredient_wool">Wool</string>
    <string name="ingredient_wool_fat">Wool fat, lanolin</string>
    <string name="ingredient_zeaxanthin">Zeaxanthin</string>
    <string name="ingredient_seaweed">Seaweed</string>
    <string name="ingredient_silk">Silk</string>
    <string name="ingredient_sunflower_lecithin">Sunflower lecithin</string>
    <string name="ingredient_potassium_inosinate_info">Potassium inosinate is a potassium salt of inosinic acid. Inosinic acid is a substance that occurs naturally in both plants and animals and plays a role in the metabolism of cells. It is used as a flavor enhancer in foods. Inosinic acid is often added to savory products such as stock cubes, ready-to-eat noodles and chips. Inosinic acid can be isolated from meat and fish, but can also be produced in a vegan way. Major producers have indicated that they use vegan-produced inosinic acid.</string>
    <string name="ingredient_disodium_5_ribonucleotides_info">Disodium 5\'-ribonucleotides is a mixture of calcium salts of guanylic and insinic acid. Both of these are often produces in a vegan way.</string>
</resources>